--- a/partials/site-nav.hbs
+++ b/partials/site-nav.hbs
@@ -19,6 +19,7 @@
             {{#if @blog.twitter}}
                 <a class="social-link social-link-tw" href="{{twitter_url @blog.twitter}}" title="Twitter" target="_blank" rel="noopener">{{> "icons/twitter"}}</a>
             {{/if}}
+            <a class="social-link social-link-fb" href="https://www.instagram.com/emilyruniablog" title="Instagram" target="_blank" rel="noopener">{{> "icons/instagram"}}</a>
         </div>
         {{#if @labs.subscribers}}
             <a class="subscribe-button" href="#subscribe">Subscribe</a>
