--- a/post.hbs
+++ b/post.hbs
@@ -149,7 +149,7 @@ into the {body} of the default.hbs template --}}
    */
   var disqus_config = function () {
       this.page.url = "{{url}}";  // Replace PAGE_URL with your page's canonical URL variable
-      this.page.identifier = "ghost-{{id}}";
+      this.page.identifier = "ghost-{{comment_id}}";
   };
 
   (function() { // DON'T EDIT BELOW THIS LINE
