--- a/post.hbs
+++ b/post.hbs
@@ -148,8 +148,8 @@ into the {body} of the default.hbs template --}}
    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables
    */
   var disqus_config = function () {
-      this.page.url = "{{url}}";  // Replace PAGE_URL with your page's canonical URL variable
-      this.page.identifier = "ghost-{{comment_id}}";
+      this.page.url = '{{url absolute=true}}';
+      this.page.identifier = '{{comment_id}}';
   };
 
   (function() { // DON'T EDIT BELOW THIS LINE
